# OpenDetect_AI

./: .env.example  .gitignore  Makefile  README.md  api.py  error.txt  langgraph.json  pyproject.toml  面试.md
.github/workflows/: ci.yml
frontend/: index.html
src/opendetect_ai/: approval.py  context_utils.py  env_utils.py  graph.py  prompts.py  state.py  user_memory.py
src/opendetect_ai/agents/: clarify.py  ingest.py  rag.py  report.py  resolve.py  search.py  supervisor.py  verify.py
src/opendetect_ai/eval/: clarify_eval.py  intent_eval.py  rag_eval.py  route_eval.py
src/opendetect_ai/tools/: arxiv_tool.py  mcp_client.py  openalex_mcp_server.py  progress.py  rag_tool.py  retriever.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_api.py  test_approval.py  test_configuration.py  test_graph_routing.py  test_ingest.py  test_rag_eval.py  test_rag_tool.py  test_resolve.py  test_retriever.py  test_search.py  test_user_memory.py
